<?xml version="1.0"?>
<package format="3">
  <name>apriltag_detector_pkg</name>
  <version>0.1.0</version>
  <description>ROS2 package that subscribes to images and detects AprilTags using pupil_apriltags.</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
